--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="medium-6 columns medium-push-6">
         <img class="thumbnail pm_image"
-          src="https://s3.amazonaws.com/agilephd/project_management.jpg">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
         <h2>Agile Project Management</h2>
