customizing index.html for AgilePhd

--- a/index.html
+++ b/index.html
@@ -100,27 +100,27 @@
     <div class="row medium-up-3 ">
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/damagelist.png">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/health_engagements.png">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/animalminder_2.jpg">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sabot_solutions.png">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/sicklewell.png">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://s3.amazonaws.com/agilephd/rails_girls.png">
+          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
 
     </div>
