--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
       </div>
       <div class="medium-6 columns medium-pull-6">
-        <h2>Agile Project Management</h2>
+        <h2>Agile Shrek Management</h2>
         <p>
           As an experienced agile project manager, AgilePhD is the niche provider
           clients seek out when they are looking to implement business-enhancing,
@@ -100,27 +100,27 @@
     <div class="row medium-up-3 ">
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/damagelist.png">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/health_engagements.png">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/animalminder_2.jpg">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/sabot_solutions.png">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/sicklewell.png">
       </div>
       <div class="column">
         <img class="thumbnail"
-          src="https://www.looper.com/img/gallery/shrek-5-release-date-characters-and-plot-what-we-know-so-far/when-will-shrek-5-be-released-1623296335.jpg">
+          src="https://s3.amazonaws.com/agilephd/rails_girls.png">
       </div>
 
     </div>
